# tita-gazebo-ignition

./: .gitignore  command  run_sim.sh
tita_ws/src/tita_bal_ign/: CMakeLists.txt  package.xml
tita_ws/src/tita_bal_ign/config/: tita_controller_pos_2.yaml
tita_ws/src/tita_bal_ign/data/: plot.ipynb
tita_ws/src/tita_bal_ign/data/20260309_154427_data/: 20260309_154427_result.csv
tita_ws/src/tita_bal_ign/include/: tita.hpp  tita_robot_main.hpp
tita_ws/src/tita_bal_ign/launch/: tita_pos_2_gazebo.launch.py
tita_ws/src/tita_bal_ign/model/urdf/: tita2.urdf
tita_ws/src/tita_bal_ign/src/: main.cpp  tita.cpp
tita_ws/src/tita_bal_ign/world/: tita_world.sdf
