<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tita_bal_ign</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mok@todo.todo">mok</maintainer>
  <license>TODO: License declaration</license>

<buildtool_depend>ament_cmake</buildtool_depend>

  <depend>tita_description</depend>

  <build_depend>control_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_action</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>joy</build_depend>
  
  <build_depend>eigen3_cmake_module</build_depend>
  <build_export_depend>eigen3_cmake_module</build_export_depend>
  <exec_depend>eigen3_cmake_module</exec_depend>
  <build_depend>eigen</build_depend>
  <build_export_depend>eigen</build_export_depend>
  <exec_depend>eigen</exec_depend>
  <build_depend>osqp-eigen</build_depend>
  <build_export_depend>osqp-eigen</build_export_depend>
  <exec_depend>osqp-eigen</exec_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>joy</exec_depend>

  <!-- ros2_control -->
  <exec_depend>ackermann_steering_controller</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>imu_sensor_broadcaster</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>mecanum_drive_controller</exec_depend>
  <exec_depend>ros2controlcli</exec_depend>
  <exec_depend>tricycle_controller</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>
  <build_export_depend>joy</build_export_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
